--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     environment:
       - DATABASE_URL=postgresql+psycopg://driftlog:driftlog_dev@postgres:5432/driftlog
       - APP_ENV=development
+      - OPENAI_API_KEY=${OPENAI_API_KEY}
     depends_on:
       postgres:
         condition: service_healthy
