--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "driftlog"
 version = "0.1.0"
 description = "AI-powered travel knowledge system"
-requires-python = ">=3.11"
+requires-python = ">=3.10"
 dependencies = [
     "fastapi>=0.115.0",
     "uvicorn[standard]>=0.34.0",
@@ -11,6 +11,8 @@ dependencies = [
     "pgvector>=0.3.0",
     "python-dotenv>=1.0.0",
     "pydantic-settings>=2.0.0",
+    "langchain-text-splitters>=0.3.0",
+    "openai>=1.0.0",
 ]
 
 [project.optional-dependencies]
