--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "pydantic-settings>=2.0.0",
     "langchain-text-splitters>=0.3.0",
     "openai>=1.0.0",
+    "anthropic>=0.39.0",
 ]
 
 [project.optional-dependencies]
