Add BM25 sparse search and Cohere reranking to enhance query processing
- Updated docker-compose.yml to include CO_API_KEY for Cohere API integration.
- Added rank-bm25 and cohere dependencies in pyproject.toml.
- Implemented BM25Index class for sparse search in sparse.py.
- Introduced fusion and reranking functionalities in new modules: fusion.py and reranker.py.
- Enhanced query endpoint in main.py to utilize hybrid retrieval strategy combining dense and sparse results.
- Updated answer generation to incorporate rerank scores from the new reranking process.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       - APP_ENV=development
       - OPENAI_API_KEY=${OPENAI_API_KEY}
       - ANTHROPIC_API_KEY=${ANTHROPIC_API_KEY}
+      - CO_API_KEY=${CO_API_KEY}
     depends_on:
       postgres:
         condition: service_healthy
